--- a/user.html
+++ b/user.html
@@ -103,6 +103,8 @@
             background-color: #1E1E1E;
             /* 기본 행 배경 */
             transition: all 0.3s ease;
+            cursor: pointer;
+            /* 클릭 가능한 커서 */
         }
 
         .table-dark tbody tr:nth-child(odd) {
@@ -149,51 +151,113 @@
         }
 
         .modal-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            /* 모달 내부 여백 */
             background-color: #1E1E1E;
             /* 다크모드 배경 */
-            color: #E0E0E0;
-            /* 텍스트 색상 */
-            border: none;
             border-radius: 8px;
+            /* 모서리 둥글게 */
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+            max-height: 90vh;
+            /* 화면 높이를 초과하지 않도록 제한 */
+            overflow: auto;
+            /* 콘텐츠가 많을 경우 스크롤 추가 */
+        }
+
+        .modal-content .table-responsive {
+            display: flex;
+            justify-content: center;
+            /* 가로 중앙 정렬 */
+            align-items: center;
+            /* 세로 중앙 정렬 */
         }
 
         .modal-content .table {
-            background-color: #252525 !important;
-            /* 테이블 전체 어두운 배경 */
-            color: #E0E0E0 !important;
-            /* 텍스트 색상 */
+            margin: auto;
+            /* 테이블을 모달 내 중앙 정렬 */
+            width: 80%;
+            /* 테이블 너비 제한 */
+            max-width: 100%;
+            /* 화면에 맞추기 */
+            text-align: center;
+            /* 텍스트 중앙 정렬 */
         }
 
         .modal-content .table th {
-            background-color: #2e2e2e !important;
+            background-color: #2e2e2e;
             /* 헤더 배경 */
-            color: #BB86FC !important;
+            color: #BB86FC;
             /* 헤더 텍스트 */
         }
 
         .modal-content .table td {
-            background-color: #4e4e4e !important;
-            /* 셀 배경 */
-            color: #E0E0E0 !important;
-            /* 셀 텍스트 */
-            border: 1px solid #444 !important;
+            color: #E0E0E0;
+            /* 기본 텍스트 */
+            border: 1px solid #444;
         }
 
-        .modal-header {
-            background-color: #333;
-            /* 헤더 배경 */
-            border-bottom: 1px solid #444;
-            color: #BB86FC;
-            /* 헤더 텍스트 색상 */
+        .modal-content .table tbody tr:nth-child(odd) td {
+            background-color: #2A2A2A;
+            /* 홀수 행 연한 색 */
         }
 
-        .modal-footer {
-            background-color: #2C2C2C;
-            /* 푸터 배경 */
-            border-top: 1px solid #444;
+        .modal-content .table tbody tr:nth-child(even) td {
+            background-color: #303030;
+            /* 짝수 행 진한 색 */
         }
 
+        .modal-content .table tbody tr:hover td {
+            background-color: #444;
+            /* Hover 시 강조 */
+            box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
+            /* Hover 시 그림자 */
+        }
+
+        .modal-dialog {
+            display: flex;
+            justify-content: center;
+            /* 가로 중앙 정렬 */
+            align-items: center;
+            /* 세로 중앙 정렬 */
+            min-height: 100vh;
+            /* 화면 전체 높이 */
+            margin: 0 auto;
+            /* 자동 여백으로 중앙 정렬 */
+            max-width: 90%;
+            /* 최대 너비 설정 */
+        }
+
+        .modal-content {
+            width: 100%;
+            /* 모달 콘텐츠를 최대 너비로 설정 */
+            max-width: 800px;
+            /* 최대 너비 제한 */
+            margin: auto;
+            /* 중앙 정렬 */
+            border-radius: 12px;
+            /* 둥근 모서리 */
+            overflow: hidden;
+            /* 넘치는 콘텐츠 숨김 */
+        }
+
+        .modal-content .table {
+            margin: 0 auto;
+            /* 테이블을 중앙 정렬 */
+            max-width: 100%;
+            /* 테이블의 최대 너비를 모달에 맞춤 */
+        }
+
+        .modal-content .table th,
+        .modal-content .table td {
+            text-align: center;
+            /* 텍스트 중앙 정렬 */
+            vertical-align: middle;
+            /* 수직 중앙 정렬 */
+        }
 
         .team1 {
             color: #FFD700;
@@ -334,6 +398,20 @@
             color: #FFD700;
             /* 티어 강조 색 */
         }
+
+        /* Team 1 닉네임 색상 */
+        .team1-nickname {
+            color: #00BFFF;
+            /* 파란색 */
+            font-weight: bold;
+        }
+
+        /* Team 2 닉네임 색상 */
+        .team2-nickname {
+            color: #FFA500;
+            /* 주황색 */
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -417,33 +495,24 @@
     <div class="modal fade" id="matchModal" tabindex="-1" aria-labelledby="matchModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="matchModalLabel">Match Details</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="table-responsive">
-                        <table id="matchDetails" class="table table-striped table-hover">
-                            <thead class="table-dark">
-                                <tr>
-                                    <th>닉네임</th>
-                                    <th>킬</th>
-                                    <th>데스</th>
-                                    <th>결과</th>
-                                    <th>닉네임</th>
-                                    <th>킬</th>
-                                    <th>데스</th>
-                                    <th>결과</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- 매치 데이터가 동적으로 추가됩니다 -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <div class="table-responsive">
+                    <table id="matchDetails" class="table table-striped table-hover">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Phantom</th>
+                                <th>K</th>
+                                <th>D</th>
+                                <th>ELO</th>
+                                <th>Ghost</th>
+                                <th>K</th>
+                                <th>D</th>
+                                <th>ELO</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- 매치 데이터가 동적으로 추가됩니다 -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -628,6 +697,10 @@
                     <td>${deaths}</td>
                     <td>${eloChangeText}</td>
                 `;
+                        row.addEventListener("click", () => {
+                            displayMatchDetails(roundNumber, matches);
+                        });
+
                         matchHistoryTable.appendChild(row);
                     });
 
@@ -642,40 +715,81 @@
             const matchDetailsBody = document.getElementById("matchDetails").querySelector("tbody");
             matchDetailsBody.innerHTML = "";
 
+            // aftercalc.csv 데이터 가져오기
+            fetch('https://yusi0.github.io/KPFM/aftercalc.csv')
+                .then(response => response.text())
+                .then(data => {
+                    const rows = data.trim().split('\n');
+                    const headers = rows[0].split(',').map(header => header.trim());
+                    const aftercalc = rows.slice(1).map(row => {
+                        const values = row.split(',').map(value => value.trim());
+                        return Object.fromEntries(headers.map((header, index) => [header, values[index]]));
+                    });
 
-            // 팀별로 데이터 분리
-            const team1Players = matches.filter(player =>
-                String(player.Round) === String(round) && String(player.Team) === "1"
-            );
-            const team2Players = matches.filter(player =>
-                String(player.Round) === String(round) && String(player.Team) === "2"
-            );
+                    // 팀별로 데이터 분리
+                    const team1Players = matches.filter(player =>
+                        String(player.Round) === String(round) && String(player.Team) === "1"
+                    );
+                    const team2Players = matches.filter(player =>
+                        String(player.Round) === String(round) && String(player.Team) === "2"
+                    );
 
-            // 두 팀 중 가장 많은 플레이어 수
-            const maxPlayers = Math.max(team1Players.length, team2Players.length);
+                    // 두 팀 중 가장 많은 플레이어 수
+                    const maxPlayers = Math.max(team1Players.length, team2Players.length);
 
-            // 테이블에 데이터 추가
-            for (let i = 0; i < maxPlayers; i++) {
-                const team1Player = team1Players[i] || {};
-                const team2Player = team2Players[i] || {};
+                    // 테이블에 데이터 추가
+                    for (let i = 0; i < maxPlayers; i++) {
+                        const team1Player = team1Players[i] || {};
+                        const team2Player = team2Players[i] || {};
 
-                const row = document.createElement("tr");
-                row.innerHTML = `
-            <td class="team1">${team1Player.Nickname || ""}</td>
-            <td class="team1">${team1Player.Kills || ""}</td>
-            <td class="team1">${team1Player.Deaths || ""}</td>
-            <td class="team1">${team1Player.Team === team1Player['Winning Team'] ? 'Win' : 'Loss'}</td>
-            <td class="team2">${team2Player.Nickname || ""}</td>
-            <td class="team2">${team2Player.Kills || ""}</td>
-            <td class="team2">${team2Player.Deaths || ""}</td>
-            <td class="team2">${team2Player.Team === team2Player['Winning Team'] ? 'Win' : 'Loss'}</td>
-        `;
-                matchDetailsBody.appendChild(row);
+                        const team1EloChange = calculateEloChange(team1Player, aftercalc);
+                        const team2EloChange = calculateEloChange(team2Player, aftercalc);
+
+                        const row = document.createElement("tr");
+                        row.innerHTML = `
+                    <td class="team1-nickname">${team1Player.Nickname || ""}</td>
+                    <td class="team1">${team1Player.Kills || ""}</td>
+                    <td class="team1">${team1Player.Deaths || ""}</td>
+                    <td class="team1">${team1EloChange}</td>
+                    <td class="team2-nickname">${team2Player.Nickname || ""}</td>
+                    <td class="team2">${team2Player.Kills || ""}</td>
+                    <td class="team2">${team2Player.Deaths || ""}</td>
+                    <td class="team2">${team2EloChange}</td>
+                `;
+                        matchDetailsBody.appendChild(row);
+                    }
+
+                    // 모달 표시
+                    const matchModal = new bootstrap.Modal(document.getElementById("matchModal"));
+                    matchModal.show();
+                })
+                .catch(error => console.error("Error loading aftercalc.csv:", error));
+        }
+
+        function calculateEloChange(player, aftercalc) {
+            if (!player.Nickname) return ""; // 닉네임이 없는 경우 빈 문자열 반환
+
+            const playerRounds = aftercalc.filter(round => round.Nickname === player.Nickname);
+            const currentRound = playerRounds.find(round => String(round.Round) === String(player.Round));
+
+            if (!currentRound) return ""; // 현재 라운드 데이터가 없으면 빈 문자열 반환
+
+            const currentElo = parseInt(currentRound.ELO, 10) || 1500;
+            const previousElo = playerRounds
+                .filter(round => parseInt(round.Round, 10) < parseInt(player.Round, 10))
+                .map(round => parseInt(round.ELO, 10) || 1500)
+                .pop() || 1500;
+
+            const eloChange = currentElo - previousElo;
+
+            // ELO 증감 표시
+            if (eloChange > 0) {
+                return `<span style="color: #28a745;">+${eloChange}</span>`; // 초록색
+            } else if (eloChange < 0) {
+                return `<span style="color: #dc3545;">${eloChange}</span>`; // 빨간색
+            } else {
+                return `<span>${eloChange}</span>`; // 변화 없음
             }
-
-            // 모달 표시
-            const matchModal = new bootstrap.Modal(document.getElementById("matchModal"));
-            matchModal.show();
         }
 
         function renderELOTrend(eloHistory, tierHistory) {
