--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
 
         .table-container {
             width: 100%;
-            overflow-x: auto;
-            /* 가로 스크롤 허용 */
             margin-top: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
@@ -86,8 +84,10 @@
 
         table {
             width: 100%;
+            /* 부모 컨테이너에 맞게 테이블 너비 조정 */
             border-collapse: collapse;
             background-color: #1E1E1E;
+            /* 고정된 테이블 레이아웃 */
         }
 
         th,
