--- a/user.html
+++ b/user.html
@@ -85,15 +85,33 @@
             /* 가로 스크롤 활성화 */
         }
 
+        th,
+        td {
+            width: auto;
+            /* 셀 너비를 내용에 맞게 */
+            text-align: center;
+            /* 텍스트 중앙 정렬 */
+        }
+
         /* 매치 내역 테이블 스타일 */
 
         .table-dark {
             width: 100%;
-            /* 테이블 너비를 컨테이너에 맞춤 */
-            min-width: 600px;
-            /* 최소 너비 설정 */
+            table-layout: fixed;
+            /* 테이블 너비 고정 */
             border-collapse: collapse;
             /* 테두리 중첩 */
+        }
+
+
+        .table-dark th,
+        .table-dark td {
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            text-overflow: ellipsis;
+            white-space: normal;
+            padding: 8px;
+            font-size: 13px;
         }
 
         .table-dark tbody tr:nth-child(odd) {
@@ -466,6 +484,25 @@
             color: #FF9800;
             /* 낮은 승률 강조 색 */
         }
+
+        #topBanner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1050;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #b50000;
+            font-size: 12;
+            /* 배경색 */
+            color: #f6f6f6;
+            /* 텍스트 색상 */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            /* 그림자 */
+            border: none;
+            /* 테두리 제거 */
+        }
     </style>
 </head>
 
@@ -525,7 +562,7 @@
                 <canvas id="kdrTrend"></canvas>
             </div>
         </div>
-        <div class="table-responsive mt-5">
+        <div class="table-responsive">
             <table id="mapWinRate" class="table table-dark">
                 <thead class="table-dark">
                     <tr>
@@ -605,8 +642,7 @@
         let tierHistory = [];
         let elo = 1500; // 기본 ELO 값
 
-        // 유저 카드의 ELO를 lboard.csv에서 가져오기
-        fetch('https://yusi0.github.io/KPFM/match.csv')
+        fetch(`https://yusi0.github.io/KPFM/match.csv?timestamp=${Date.now()}`)
             .then(response => response.text())
             .then(data => {
                 const rows = data.trim().split('\n');
@@ -616,7 +652,7 @@
                     return Object.fromEntries(headers.map((header, index) => [header, values[index]]));
                 });
 
-                processUserStats(nickname, matches);
+                processUserStats(nickname, matches); // 유저 데이터 처리
             })
             .catch(error => console.error("Error loading match.csv:", error));
 
