--- a/user.html
+++ b/user.html
@@ -503,6 +503,21 @@
             border: none;
             /* 테두리 제거 */
         }
+
+        #backButton {
+            background-color: #b082ff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #backButton:hover {
+            background-color: #5a6268;
+        }
     </style>
 </head>
 
@@ -561,6 +576,9 @@
             <div class="col-md-6">
                 <canvas id="kdrTrend"></canvas>
             </div>
+        </div>
+        <div style="text-align: center; margin: 20px;">
+            <button id="backButton" class="btn btn-secondary">뒤로가기</button>
         </div>
         <div class="table-responsive">
             <table id="mapWinRate" class="table table-dark">
@@ -638,6 +656,11 @@
             console.log("닉네임 값 확인:", nickname); // 디버깅용
             document.getElementById("statNickname").textContent = nickname;
         }
+
+        document.getElementById("backButton").addEventListener("click", function () {
+            window.location.href = "index.html";
+        });
+
         let eloHistory = [];
         let tierHistory = [];
         let elo = 1500; // 기본 ELO 값
