--- a/user.html
+++ b/user.html
@@ -505,25 +505,56 @@
         }
 
         #backButton {
-            background-color: #b082ff;
+            background-color: #272727;
+            /* 버튼 색상 */
             color: #fff;
+            /* 아이콘 색상 */
             border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 14px;
+            /* 테두리 제거 */
+            border-radius: 20%;
+            /* 정사각형 내부에 원형 버튼 */
+            width: 40px;
+            /* 버튼 너비 */
+            height: 40px;
+            /* 버튼 높이 */
+            justify-content: center;
             cursor: pointer;
-            transition: background-color 0.3s;
+            /* 클릭 커서 */
+            transition: background-color 0.3s ease;
         }
 
         #backButton:hover {
-            background-color: #5a6268;
+            background-color: #575757;
+            /* 호버 시 색상 */
+        }
+
+        h1 {
+            font-size: 1.8rem;
+            color: #BB86FC;
+            text-align: center;
+            /* 중앙 정렬 */
+            flex-grow: 1;
+            /* 부모 요소 내 공간을 균등하게 차지 */
+            margin: 0;
+            /* 여백 제거 */
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>유저 스테이터스</h1>
+        <div
+            style="display: flex; align-items: center; justify-content: flex-start; margin-left: -130px; margin-bottom: 20px; gap: 100px;">
+            <button id="backButton" class="btn btn-secondary"
+                style="display: flex; align-items: center; padding: 5px 10px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-arrow-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708.708L2.707 7.5H14.5a.5.5 0 0 1 .5.5z" />
+                </svg>
+            </button>
+            <h1 style="margin: 0;">유저 스테이터스</h1>
+        </div>
         <div id="userStats" class="mb-4">
             <div class="membership-card">
                 <div class="card-header">
@@ -576,9 +607,6 @@
             <div class="col-md-6">
                 <canvas id="kdrTrend"></canvas>
             </div>
-        </div>
-        <div style="text-align: center; margin: 20px;">
-            <button id="backButton" class="btn btn-secondary">뒤로가기</button>
         </div>
         <div class="table-responsive">
             <table id="mapWinRate" class="table table-dark">
